# FINAL_ES

./: Diagrama de flujo Mouse_kinect.dia  README.md  README.txt
200934649-tarea2/: Makefile  fork-webserver.c  stress-client.c
BB_xM/Final/libfreenect/: CMakeLists.txt~
BB_xM/Final/libfreenect/examples/: CMakeLists.txt
BB_xM/Final/libfreenect/wrappers/Kinect-Mouse/: CMakeLists.txt  mouse.cpp  mouse.cpp~
BB_xM/Final/libfreenect/wrappers/Kinect-Mouse1/: CMakeLists.txt
BB_xM/Final/libfreenect/wrappers/Kinect-Mouse2/: CMakeLists.txt~  mouse.cpp  mouse.cpp~
BB_xM/Final/libfreenect/wrappers/Kinect-Mouse3/: mouse.cpp  mouse.cpp~
BB_xM/Final/libfreenect/wrappers/Kinect-Mouse4/: mouse.cpp  mouse.cpp~
BB_xM/libfreenect1/examples/: kinect_mouse1.c
BB_xM/libfreenect2/: CMakeLists.txt
BB_xM/libfreenect2/examples/: CMakeLists.txt~  kinect_mouse.c  kinect_mouse.c~
appserver/: Makefile  chatserver.pro  connection.cpp  connection.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_connection.cpp  moc_mainwindow.cpp  moc_secondwindow.cpp  moc_server.cpp  resources.qrc  server.cpp  server.h  ui_mainwindow.h  ui_secondwindow.h
mouse_control_python/: README.txt
prueba1/: Makefile  test1  test1.cpp
sergiocpp/: CMakeLists.txt  Kinectcppview.cpp  Kinectcppview.cpp~
ubuntu/Kinect-Mouse/: kinect_mouse.c  kinect_mouse.c~
